<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recharge_way"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:id="@+id/fl_alipay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/recharge_fraglayout_bg"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recharge_alipay"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@drawable/recharge_pay_way_bg"
                android:duplicateParentState="true"
                android:padding="10dp"/>
            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:background="@drawable/sel_ic_pay_channel"
                android:layout_gravity="bottom|right"/>

        </FrameLayout>
        <FrameLayout
            android:id="@+id/fl_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/recharge_fraglayout_bg"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recharge_wechat"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@drawable/recharge_pay_way_bg"
                android:duplicateParentState="true"
                android:padding="10dp"/>
            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:background="@drawable/sel_ic_pay_channel"
                android:layout_gravity="bottom|right"/>

        </FrameLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/recharge_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosed_recharge_way"/>


<android.support.v7.widget.RecyclerView
    android:id="@+id/test_recyclerview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
</android.support.v7.widget.RecyclerView>


    <Button
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

</LinearLayout>
