<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_select">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">

        <LinearLayout

            android:id="@+id/ll_name_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/authentication_icon_name" />

                <EditText
                    android:id="@+id/edit_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:gravity="left|center_vertical"
                    android:hint="请输入账号"
                    android:maxLines="1"
                    android:textColor="@color/yunkacolor"
                    android:singleLine="true"
                    android:textColorHint="@color/yunkacolor"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_login_password" />

                <EditText
                    android:id="@+id/edit_pass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/yunkacolor"
                    android:hint="请输入密码"
                    android:inputType="textPassword"
                    android:textColorHint="@color/yunkacolor"
                    android:textSize="15sp" />

            </LinearLayout>
            <TextView
                android:id="@+id/backpassword"
                android:layout_marginRight="15dp"
                android:textColor="@color/yunkacolor"
                android:layout_gravity="right"
                android:textSize="15sp"
                android:text="找回密码"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/ll_register"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/login_by_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/login2_button_a"
                android:backgroundTint="@color/yunkacolor"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@id/ll_register"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/login2_button_a"
                android:backgroundTint="@color/yunkacolor"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="12dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_select_agree"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_md_smallest" />

            <TextView
                android:id="@+id/login_select_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_select_privacy"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_md_smallest" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
